# tmp-minimal-example

./: Cargo.toml
src/: main.rs
