[package]
name = "minimal-example"
version = "0.1.0"
authors = ["Igor Kotrasinski <i.kotrasinsk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faux = {path = "../../faux"}
tokio = {version = "1.0.1", features = ["io-util", "net"]}
